add disconnected notifications for vision, more work on sim vision